Connecting frontend app with backend

--- a/task/src/main/resources/templates/index.html
+++ b/task/src/main/resources/templates/index.html
@@ -11,8 +11,9 @@
 		<div class="jumbotron">
 			<div class="container text-center">
 				<h3>Persons</h3>
-				<button type="button" class="btn btn-primary text-center">Load data</button>
-				<button type="button" class="btn btn-primary text-center">Save data</button>
+				<a  th:href="@{/getPersons}" class="btn btn-primary text-center">Load data</a>
+				<button  id="saveData"type="button" class="btn btn-primary text-center">Save data</button>
+				
 			</div>
 			
 		</div>
